# qa-automation-assignment-sofiia

./: .env.example  .gitignore  DESIGN.md  README.md  pyproject.toml
.github/workflows/: tests.yml
config/: settings.py
framework/api/: client.py  schemas.py
framework/ui/pages/: base_page.py  cart_page.py  checkout_page.py  inventory_page.py  login_page.py
tests/: conftest.py
tests/api/: conftest.py  test_posts_read.py  test_posts_write.py
tests/ui/: conftest.py  test_cart.py  test_checkout.py  test_login.py
