[project]
name = "qa-automation-assignment"
version = "0.1.0"
description = "QA Automation Lead practical assignment: UI (Swag Labs) + API (JSONPlaceholder)"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.44",
    "pytest>=8.0",
    "pytest-playwright>=0.5",
    "pytest-xdist>=3.5",
    "pytest-html>=4.1",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
# Ship the framework and config as importable packages; tests are not packaged.
include = ["config*", "framework*"]

[tool.pytest.ini_options]
# Make `config` and `framework` importable from test files without packaging tricks.
pythonpath = ["."]
testpaths = ["tests"]
# Failure artifacts and reporting come from the tooling, not from try/except in tests:
#   - tracing:    Playwright trace (timeline + DOM snapshots + network) on failure
#   - screenshot: PNG on failure
#   - video:      browser video on failure
#   - html:       self-contained pytest-html report (path set in tests/conftest.py:
#                 reports/report_<timestamp>.html locally, reports/report.html in CI)
addopts = """
    --strict-markers
    --tracing=retain-on-failure
    --screenshot=only-on-failure
    --video=retain-on-failure
    --output=test-results
"""
markers = [
    "ui: browser tests against Swag Labs",
    "api: HTTP tests against JSONPlaceholder",
]
